@@ -16,23 +16,12 @@
 
     </en> </comments>
     <printers>
-	<printer>
-	    <id>printer/Minolta-magicolor_2300_DL</id>
-	</printer>
-	<printer>
-	    <id>printer/Minolta-magicolor_2200_DL</id>
-	</printer>
-	<printer>
-	    <id>printer/HP-LaserJet_1000</id>
-	</printer>
-	<printer>
-	    <id>printer/HP-LaserJet_1005</id>
-	</printer>
-	<printer>
-	    <id>printer/Generic-ZjStream_Printer</id>
-	</printer>
-	<printer>
-	    <id>printer/Generic-GDI_Printer</id>
-	</printer>
+	<printer><id>printer/Minolta-magicolor_2300_DL</id></printer>
+	<printer><id>printer/Minolta-magicolor_2200_DL</id></printer>
+	<printer><id>printer/Minolta-Color_PageWorks_Pro_L</id></printer>
+	<printer><id>printer/HP-LaserJet_1000</id></printer>
+	<printer><id>printer/HP-LaserJet_1005</id></printer>
+	<printer><id>printer/Generic-ZjStream_Printer</id></printer>
+	<printer><id>printer/Generic-GDI_Printer</id></printer>
     </printers>
 </driver>
