@@ -41,6 +41,7 @@
 	    <ev_shortname> <en>none</en> </ev_shortname>
 	    <ev_driverval></ev_driverval>
 	</enum_val>
+
 	<enum_val id="ev/foo2zjs-ICM-DL2312">
 	    <ev_longname> <en>File DL2312.icm</en> </ev_longname>
 		<!-- A multilingual <comments> block can appear here, too;
@@ -49,10 +50,10 @@
 	    <ev_driverval>-GDL2312.icm</ev_driverval>
 	    <constraints>
 	        <constraint sense="false">
-	    	    <make>HP</make> <model>LaserJet 1000</model>
+		    <driver>foo2zjs</driver>
 	        </constraint>
-	        <constraint sense="false">
-	    	    <make>HP</make> <model>LaserJet 1005</model>
+	        <constraint sense="true">
+	    	    <printer>Minolta-magicolor_2300_DL</printer>
 	        </constraint>
 	    </constraints>
 	</enum_val>
@@ -64,13 +65,14 @@
 	    <ev_driverval>-GDL2324.icm</ev_driverval>
 	    <constraints>
 	        <constraint sense="false">
-	    	    <make>HP</make> <model>LaserJet 1000</model>
+		    <driver>foo2zjs</driver>
 	        </constraint>
-	        <constraint sense="false">
-	    	    <make>HP</make> <model>LaserJet 1005</model>
+	        <constraint sense="true">
+	    	    <printer>Minolta-magicolor_2300_DL</printer>
 	        </constraint>
 	    </constraints>
 	</enum_val>
+
 	<enum_val id="ev/foo2zjs-ICM-DL2200RGB">
 	    <ev_longname> <en>File DL2200RGB.icm</en> </ev_longname>
 		<!-- A multilingual <comments> block can appear here, too;
@@ -79,13 +81,60 @@
 	    <ev_driverval>-GDL2200RGB.icm</ev_driverval>
 	    <constraints>
 	        <constraint sense="false">
-	    	    <make>HP</make> <model>LaserJet 1000</model>
+		    <driver>foo2zjs</driver>
 	        </constraint>
-	        <constraint sense="false">
-	    	    <make>HP</make> <model>LaserJet 1005</model>
+	        <constraint sense="true">
+	    	    <printer>Minolta-magicolor_2200_DL</printer>
 	        </constraint>
 	    </constraints>
 	</enum_val>
+
+	<enum_val id="ev/foo2zjs-ICM-CPWL6W">
+	    <ev_longname> <en>File CPWL6W.icm</en> </ev_longname>
+		<!-- A multilingual <comments> block can appear here, too;
+		 it should be treated as documentation for the user. -->
+	    <ev_shortname> <en>CPWL6W</en> </ev_shortname>
+	    <ev_driverval>-GCPWL6W.icm</ev_driverval>
+	    <constraints>
+	        <constraint sense="false">
+		    <driver>foo2zjs</driver>
+	        </constraint>
+	        <constraint sense="true">
+	    	    <printer>Minolta-Color_PageWorks_Pro_L</printer>
+	        </constraint>
+	    </constraints>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-ICM-CPWL12W">
+	    <ev_longname> <en>File CPWL12W.icm</en> </ev_longname>
+		<!-- A multilingual <comments> block can appear here, too;
+		 it should be treated as documentation for the user. -->
+	    <ev_shortname> <en>CPWL12W</en> </ev_shortname>
+	    <ev_driverval>-GCPWL12W.icm</ev_driverval>
+	    <constraints>
+	        <constraint sense="false">
+		    <driver>foo2zjs</driver>
+	        </constraint>
+	        <constraint sense="true">
+	    	    <printer>Minolta-Color_PageWorks_Pro_L</printer>
+	        </constraint>
+	    </constraints>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-ICM-CPWL24W">
+	    <ev_longname> <en>File CPWL24W.icm</en> </ev_longname>
+		<!-- A multilingual <comments> block can appear here, too;
+		 it should be treated as documentation for the user. -->
+	    <ev_shortname> <en>CPWL24W</en> </ev_shortname>
+	    <ev_driverval>-GCPWL24W.icm</ev_driverval>
+	    <constraints>
+	        <constraint sense="false">
+		    <driver>foo2zjs</driver>
+	        </constraint>
+	        <constraint sense="true">
+	    	    <printer>Minolta-Color_PageWorks_Pro_L</printer>
+	        </constraint>
+	    </constraints>
+	</enum_val>
+
 	<enum_val id="ev/foo2zjs-ICM-testing">
 	    <ev_longname> <en>File testing.icm</en> </ev_longname>
 		<!-- A multilingual <comments> block can appear here, too;
