@@ -24,16 +24,17 @@
 	    <ev_driverval>1</ev_driverval>
 	    <constraints>
 		<constraint sense="false">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2200_DL</printer>
 		</constraint>
 		<constraint sense="false">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+		<constraint sense="false">
+		    <printer>Minolta-Color_PageWorks_Pro_L</printer>
 		</constraint>
 	    </constraints>
 	</enum_val>
-	<enum_val id="ev/foo2zjs-InputSlot-1-QMS">
+	<enum_val id="ev/foo2zjs-InputSlot-1-2X00">
 	    <ev_longname> <en>Multipurpose Tray</en> </ev_longname>
 	    <ev_shortname> <en>Multipurpose</en> </ev_shortname>
 	    <ev_driverval>1</ev_driverval>
@@ -42,12 +43,23 @@
 		    <driver>foo2zjs</driver>
 		</constraint>
 		<constraint sense="true">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2200_DL</printer>
 		</constraint>
 		<constraint sense="true">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+	    </constraints>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-1-PageWorks">
+	    <ev_longname> <en>Tray 1</en> </ev_longname>
+	    <ev_shortname> <en>Tray 1</en> </ev_shortname>
+	    <ev_driverval>1</ev_driverval>
+	    <constraints>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		</constraint>
+		<constraint sense="true">
+		    <printer>Minolta-Color_PageWorks_Pro_L</printer>
 		</constraint>
 	    </constraints>
 	</enum_val>
@@ -57,12 +69,13 @@
 	    <ev_driverval>2</ev_driverval>
 	    <constraints>
 		<constraint sense="false">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2200_DL</printer>
 		</constraint>
 		<constraint sense="false">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+		<constraint sense="false">
+		    <printer>Minolta-Color_PageWorks_Pro_L</printer>
 		</constraint>
 	    </constraints>
 	</enum_val>
@@ -75,7 +88,6 @@
 		    <driver>foo2zjs</driver>
 		</constraint>
 		<constraint sense="true">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2200_DL</printer>
 		</constraint>
 	    </constraints>
@@ -86,12 +98,13 @@
 	    <ev_driverval>3</ev_driverval>
 	    <constraints>
 		<constraint sense="false">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2200_DL</printer>
 		</constraint>
 		<constraint sense="false">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+		<constraint sense="false">
+		    <printer>Minolta-Color_PageWorks_Pro_L</printer>
 		</constraint>
 	    </constraints>
 	</enum_val>
@@ -104,8 +117,20 @@
 		    <driver>foo2zjs</driver>
 		</constraint>
 		<constraint sense="true">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+	    </constraints>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-InputSlot-3-PageWorks">
+	    <ev_longname> <en>Tray 2</en> </ev_longname>
+	    <ev_shortname> <en>Tray 2</en> </ev_shortname>
+	    <ev_driverval>3</ev_driverval>
+	    <constraints>
+		<constraint sense="false">
+		    <driver>foo2zjs</driver>
+		</constraint>
+		<constraint sense="true">
+		    <printer>Minolta-Color_PageWorks_Pro_L</printer>
 		</constraint>
 	    </constraints>
 	</enum_val>
@@ -120,12 +145,13 @@
 	    <ev_driverval>5</ev_driverval>
 	    <constraints>
 		<constraint sense="false">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2200_DL</printer>
 		</constraint>
 		<constraint sense="false">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+		<constraint sense="false">
+		    <printer>Minolta-Color_PageWorks_Pro_L</printer>
 		</constraint>
 	    </constraints>
 	</enum_val>
@@ -138,7 +164,6 @@
 		    <driver>foo2zjs</driver>
 		</constraint>
 		<constraint sense="true">
-		    <driver>foo2zjs</driver>
 		    <printer>Minolta-magicolor_2200_DL</printer>
 		</constraint>
 	    </constraints>
