@@ -1,3 +1,10 @@
+2003-07-02  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* driver/foo2zjs.xml, printer/Minolta-Color_PageWorks_Pro_L.xml,
+	  opt/foo2zjs-ICM.xml, opt/foo2zjs-InputSlot.xml: Added Minolta
+	  Color PageWorks Pro L color laser printer (Thanks to Rick
+	  Richardson).
+
 2003-06-28  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-OfficeJet_4105.xml, printer/HP-OfficeJet_4115.xml:
